# Introduction-to-embedded

./: README.md  bullshit.txt  test.c  test2.c
4.2 First project LED blink/: w2_assignment2.c
4.4 Timer, compare match, interrupts/w3_assignment3/: timer.c  timer.h
4.5 7 segment display/: w4_assignment3.c
4.5 7 segment display/w5_assignment/: lcd.h
4.7 UART interface/w7_all_assignment/: uart.c  uart.h  uart1.c
4.9 Analog to Digital Converter/ADC/ADC/: ADC.cproj  adc.c  adc.h  main.c  uart.c  uart.h
4.9 Analog to Digital Converter/ADC/ADC/Debug/: ADC.elf  ADC.hex  ADC.lss  ADC.map  ADC.srec  Makefile
ATmega16/4.2 First project LED blink/: w2_assignment1.c
ATmega16/4.4 Timer, compare match, interrupts/: main.c
ATmega16/4.4 Timer, compare match, interrupts/w3_assignment1/: timer.c
ATmega16/4.5 7 segment display/: w4_assignment4.c
ATmega16/4.5 7 segment display/w5_assignment/: main.c
ATmega16/4.7 UART interface/w7_all_assignment/: w7_assignment3_8_opt.c
ATmega16/4.9 Analog to Digital Converter/ADC/ADC/: ADC.componentinfo.xml  ADC.cproj  main.c
ATmega16/4.9 Analog to Digital Converter/ADC/ADC/Debug/: ADC.hex  ADC.lss  ADC.srec  main.d
Analog to Digital Converter/ADC/ADC/: main.c
Analog to Digital Converter/ADC/ADC/Debug/: ADC.elf  ADC.map  Makefile  adc.d  uart.d
LPC214x/: links.txt
LPC214x/4.3 LEDs and whatnot/: LED_on_board_itself.c  make_the_LED_run_around.c  on_when_push_hold.c  toggle_on_push.c
LPC214x/4.4 Timer, Compare Match, Interrupts/: accurate_time_blink.c  using_interrupts.c
LPC214x/4.5 Seven Segment Display/1 second counting using interrupts/: main.c  seven_segment.c  seven_segment.h
LPC214x/4.5 Seven Segment Display/same but using external flag/: main.c
LPC214x/4.6 UART/: echo_character.c  main.c  uart_interrupt.c
LPC214x/4.9 ADC/: main.c
brickpi/basic-clion-project/: CMakeLists.txt
brickpi/basic-clion-project/JLink/: cmd.jlink
brickpi/basic-clion-project/LinkerScript/: LPC2148_flash.ld
brickpi/basic-clion-project/log/: log.c  log.h
brickpi/basic-clion-project/serial/: serial.c  serial.h
brickpi/basic-clion-project/src/: main.c
brickpi/basic-clion-project/startup/: crt0.S
brickpi/lpc2000/FreeRTOS-LPC2000-CLion/FreeRTOS/: FreeRTOSConfig.h
brickpi/lpc2000/FreeRTOS-LPC2000-CLion/src/: main.c
lucru_in_echipa_uart/: main.c  uart.c  uart.h
w2_assignment/: w2_assignment3.c
w3_assignment/: timer.c  timer.h
w3_assignment1/: main.c  timer.h
w3_assignment3/: main.c
w4_assignment(1+2)/: 7segment_display.c  7segment_display.h  main.c  w4ass3_timer.c
w5_assignment/: lcd.c
w7_all_assignment/: uart1.h
